kittens_cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: | 
  This CloudFormation Template was written for
  running Kittens Carousel Static Website on EC2.
  Kittens Carousel Static Website will be
  deployed on Amazon Linux 2
  (ami-05fa00d4c63e32376) EC2 Instance with
  custom security group which allows http
  connections on port 80 and ssh port 22 from
  anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository,
  then deployed on Apache Web Server.
  


Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0


  KittenCfnProject:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-01c647eace872fc02
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:                      
        - Key: Name
          Value: kittens-cfn
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html
            sudo chmod -R 777 /var/www/html/
            wget https://raw.githubusercontent.com/seymamece/101_kittens_template/main/static-web/index.html
            wget https://raw.githubusercontent.com/seymamece/101_kittens_template/main/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/seymamece/101_kittens_template/main/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/seymamece/101_kittens_template/main/static-web/cat2.jpg
            systemctl start httpd
            systemctl enable httpd
